--- a/SMAC/app_material/index.html
+++ b/SMAC/app_material/index.html
@@ -1,1 +1,46 @@
-BLANK WEBPAGE
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NMF Application Resources</title>
+    <style>
+        body {
+            font-family: "Courier New", Courier, monospace;
+            background-color: #f0f0f0;
+            color: #333333;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            font-size: 32px;
+            margin-bottom: 20px;
+        }
+        ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+        li {
+            font-size: 18px;
+            margin: 10px 0;
+        }
+        a {
+            text-decoration: none;
+            color: #0000ff;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <h1>NMF Application Resources</h1>
+    <ul>
+        <li><a href="2025 NMF Department Criteria.pdf" target="_blank">2025 NMF Department Criteria.pdf</a></li>
+        <li><a href="2025 NMF Fiscal Sponsor Handout.pdf" target="_blank">2025 NMF Fiscal Sponsor Handout.pdf</a></li>
+        <li><a href="2025 NMF Guidelines.pdf" target="_blank">2025 NMF Guidelines.pdf</a></li>
+        <li><a href="2025 NMF Application Worksheet.pdf" target="_blank">2025 NMF Application Worksheet.pdf</a></li>
+    </ul>
+</body>
+</html>
