--- a/raven/index.html
+++ b/raven/index.html
@@ -178,9 +178,9 @@
                 <p>
                     We will:
                     <ul>
-                        <li>Host <strong>12 free workshops</strong> (First Aid, Radio Communications, Climate Adaptation) reaching 200+ residents.</li>
-                        <li>Distribute <strong>100 emergency radios/kits</strong> to vulnerable households.</li>
-                        <li>Train volunteers to launch <strong>Emergency Communication Hubs</strong>, bridging isolated communities with city systems.</li>
+                        <p>Host <strong>12 free workshops</strong> (First Aid, Radio Communications, Climate Adaptation) reaching 200+ residents.
+                        Distribute <strong>100 emergency radios/kits</strong> to vulnerable households.
+                        Train volunteers to launch <strong>Emergency Communication Hubs</strong>, bridging isolated communities with city systems.</p>
                     </ul>
                     A project initiated by the Seattle Mutual Aid Collective in partnership with /dev/hack Collective, RAVEN integrates with Seattle’s Emergency Hub Network while centering hyperlocal needs. By linking mutual aid with citywide infrastructure, RAVEN builds redundancy <em>and</em> equity in disaster response.
                 </p>
@@ -190,7 +190,7 @@
 
     <footer>
         <div class="container">
-            <p>Emergent Communication Architectures © 2025 RAVEN</p>
+            <p>Seattle Mutual Aid Collective 2025 RAVEN</p>
         </div>
     </footer>
 </body>
