--- a/raven/index.html
+++ b/raven/index.html
@@ -178,9 +178,9 @@
                 <p>
                     We will:
                     <ul>
-                        <p>Host <strong>12 free workshops</strong> (First Aid, Radio Communications, Climate Adaptation) reaching 200+ residents.
-                        Distribute <strong>100 emergency radios/kits</strong> to vulnerable households.
-                        Train volunteers to launch <strong>Emergency Communication Hubs</strong>, bridging isolated communities with city systems.</p>
+                        <p>Host <strong>12 free workshops</strong> (First Aid, Radio Communications, Climate Adaptation) reaching 200+ residents.<br>
+                        Distribute <strong>100 emergency radios/kits</strong> to vulnerable households.<br>
+                        Train volunteers to launch <strong>Emergency Communication Hubs</strong>, bridging isolated communities with city systems.<br></p>
                     </ul>
                     A project initiated by the Seattle Mutual Aid Collective in partnership with /dev/hack Collective, RAVEN integrates with Seattle’s Emergency Hub Network while centering hyperlocal needs. By linking mutual aid with citywide infrastructure, RAVEN builds redundancy <em>and</em> equity in disaster response.
                 </p>
