--- a/raven/workshops.html
+++ b/raven/workshops.html
@@ -165,13 +165,13 @@
 
     <main>
   <h4>Seattle Mutual Aid Collective Resilience Workshop Series</h4>
-  <p>Our core programming consists of a workshop series designed to build practical skills and distribute essential resources:</p>
+  <p>Our core programming consists of a workshop series designed to build practical skills and distribute essential resources:<br></p>
   <ol>
     <li>
       <strong>Emergency First Aid Training</strong>
       <ul>
         <li>First aid training with the Stop-the-Bleed program</li>
-        <li>Accessibility of essential first aid supplies to vulnerable individuals</li>
+        <li>Accessibility of essential first aid supplies to vulnerable individuals</li><br>
       </ul>
     </li>
     <li>
@@ -179,7 +179,7 @@
       <ul>
         <li>Emergency kit and go-bag workshop with Pipsqueak Community Space</li>
         <li>Community emergency planning and household resiliency preparation</li>
-        <li>Provide of emergency supply kits and go-bag supplies to individuals and households with limited resources</li>
+        <li>Provide of emergency supply kits and go-bag supplies to individuals and households with limited resources</li><br>
       </ul>
     </li>
     <li>
@@ -187,7 +187,7 @@
       <ul>
         <li>Radio training workshop for emergency and disaster preparedness</li>
         <li>Enhance community preparedness with accessible handheld battery-operated radios</li>
-        <li>Coordination with Seattle Emergency Communication Hubs and the Auxiliary Communication Service to practice communications when standard systems fail</li>
+        <li>Coordination with Seattle Emergency Communication Hubs and the Auxiliary Communication Service to practice communications when standard systems fail</li><br>
       </ul>
     </li>
     <li>
@@ -196,11 +196,11 @@
         <li>Scientist-led climate change resilience and adaptation workshop</li>
         <li>Community gardening workshop by SMAC Seed Collective</li>
         <li>Promotion of hyperlocal food security solutions</li>
-        <li>Contribution to diversity of local seed bank</li>
+        <li>Contribution to diversity of local seed bank</li><br>
       </ul>
     </li>
   </ol>
-  <p>All workshops will include targeted outreach to vulnerable and underserved communities who often face challenges accessing standard neighborhood-based resilience efforts.</p>
+  <p>All workshops will include targeted outreach to vulnerable and underserved communities who often face challenges accessing standard neighborhood-based resilience efforts.</p><br>
 </main>
 
     <footer>
