--- a/raven/partners.html
+++ b/raven/partners.html
@@ -175,12 +175,12 @@
     <section class="systemic-introduction">
         <div class="container">
             <p>
-                <strong>Potential Partnerships:</strong><br>
-                - <strong>/dev/hack Collective</strong>: Tech support for radio networks and workshop space.<br>
-                - <strong>Capitol Hill Tool Library</strong>:<br>
-                - <strong>Seattle Auxiliary Communication Service (ACS)</strong>: Joint drills and FCC licensing assistance.<br>
-                - <strong>Park Punk Pancakes and Cal Anderson Park Alliance</strong>: Coordinate use of public space for outdoor workshop events in Cal Anderson Park.<br>
-                - Volunteer engagement: 12+ volunteers have pledged hours.
+                <strong>Potential Partnerships:</strong><br><br>
+                - <strong>/dev/hack Collective</strong>: Tech support for radio networks and workshop space.<br><br>
+                - <strong>Capitol Hill Tool Library</strong><br><br>
+                - <strong>Seattle Auxiliary Communication Service (ACS)</strong>: Joint drills and FCC licensing assistance.<br><br>
+                - <strong>Park Punk Pancakes and Cal Anderson Park Alliance</strong>: Coordinate use of public space for outdoor workshop events in Cal Anderson Park.<br><br>
+                - Volunteer engagement: 12+ volunteers have pledged hours.<br>
             </p>
         </div>
     </section>
