--- a/raven/budget.html
+++ b/raven/budget.html
@@ -175,22 +175,22 @@
   <tbody>
     <tr>
       <td>CROW Workshop material</td>
-      <td>270</td>
+      <td>$270</td>
       <td>1.81</td>
     </tr>
     <tr>
       <td>CROW: Emergency Prep kits</td>
-      <td>7571</td>
+      <td>$7,571</td>
       <td>50.70</td>
     </tr>
     <tr>
       <td>CROW: Food</td>
-      <td>2590</td>
+      <td>$2,590</td>
       <td>17.35</td>
     </tr>
     <tr>
       <td>RAVEN Communications Resilience Hub</td>
-      <td>3735</td>
+      <td>$3,735</td>
       <td>25.01</td>
     </tr>
     <tr>
@@ -200,7 +200,7 @@
     </tr>
     <tr>
       <td><strong>TOTAL MATERIALS & SUPPLIES</strong></td>
-      <td><strong>14932</strong></td>
+      <td><strong>$14,932</strong></td>
       <td></td>
     </tr>
   </tbody>
