--- a/raven/project_description.html
+++ b/raven/project_description.html
@@ -168,7 +168,8 @@
         <div class="container">
             <h1>Radio Access & <span>Volunteer</span> Emergency Networks</h1>
             <p class="hero-description">
-                Seattle faces escalating disaster risks—from earthquakes and wildfires to cyberattacks and climate-driven heatwaves—that disproportionately harm marginalized communities. The Seattle Office of Emergency Management’s <em>2023 Strategic Plan</em> identifies gaps in equitable access to preparedness resources, particularly for LGBTQ+, BIPOC, disabled, and low-income residents. Over 30% of Seattle households lack emergency plans, and only 12% of non-English-speaking residents report confidence in accessing city disaster systems. RAVEN addresses these inequities by building a decentralized, community-led network of emergency communications and mutual aid, ensuring no one is left behind when crises strike.
+                Seattle faces escalating disaster risks—from earthquakes and wildfires to cyberattacks and climate-driven heatwaves—that disproportionately harm marginalized communities. The Seattle Office of Emergency Management’s <em>2023 Strategic Plan</em> identifies gaps in equitable access to preparedness resources, particularly for LGBTQ+, BIPOC, disabled, and low-income residents. 
+                Over 30% of Seattle households lack emergency plans. RAVEN addresses these inequities by building a decentralized, community-led network of emergency communications and mutual aid, ensuring no one is left behind when crises strike.
             </p>
         </div>
     </section>
@@ -180,13 +181,13 @@
             <p>
                 <strong>12 Free Skills-Building Workshops</strong><br>
                 - <strong>Emergency Preparedness</strong>: 4 workshops to help 100+ residents plan and build emergency kits/go-bags, with free supplies for low-income households.<br>
-                - <strong>Radio Communications</strong>: 3 workshops (Basic Radio Operation, Mesh Networks, ACS Coordination) on basic emergency radio operation and coordination with volunteer radio groups. Provide 50 emergency radios to trained community radio operators.<br>
-                - <strong>Climate Adaptation</strong>: Scientist-led sessions on heatwave safety, air quality, and local food security solutions.<br>
-                - <strong>Community Care</strong>: De-escalation training, trauma-informed mutual aid organizing, and weekly <strong>Emergency Response Plan Breakfasts</strong> at Cal Anderson Park (with Cal Anderson Park Alliance and Park Punk Pancakes) to foster community resiliency planning.
+                - <strong>Communications Resilience</strong>: 3 workshops (Basic Radio Operation, Mesh Networks, Neighborhood Planning) on basic emergency radio operation and coordination with volunteer radio groups. Provide 50 emergency radios to trained community radio operators.<br>
+                - <strong>First-aid training</strong>: 2 workshops to train ~24 people on first aid skills (First-Aid, De-escalation training) and supply first aid kits.<br>
+                - <strong>Climate Adaptation and Community Resilience</strong>: 1 workshop and weekly <strong>Emergency Response Plan Breakfasts</strong> at Cal Anderson Park (with Cal Anderson Park Alliance and Park Punk Pancakes) to foster community resiliency planning.
             </p><br>
             <p>
                 <strong>RAVEN Emergency Communications Hub</strong><br>
-                - Launch a volunteer-led hub registered with Seattle’s Emergency Network, equipped with:<br>
+                - Launch a volunteer-led hub registered with Seattle’s Emergency Network<br>
                 - Establish core team of 5 radio-licensed volunteers<br>
                 - Redundant communication tools (HAM radios, mesh Wi-Fi, additional licensing requirements).<br>
                 - A “bridge” team linking isolated individuals to city systems during outages.<br>
