--- a/raven/index.html
+++ b/raven/index.html
@@ -176,9 +176,8 @@
                 <ul>
                     <li><a href="project_description.html">Project Description</a></li>
                     <li><a href="workshops.html">Workshops</a></li>
-                    <li><a href="partners.html">Community Partners</a></li>
+                    <li><a href="community_networks.html">Community Networks</a></li>
                     <li><a href="work_plan.html">Work Plan</a></li>
-                    <li><a href="match.html">Match</a></li>
                     <li><a href="budget.html">Budget</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
